modified css, resume, and contact pages to fix spacing issue with social media icons

--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,15 @@ section div {
 	padding-bottom: 5px;
 }
 
-.socialMedia img, .socialMediaContact img {
+.socialMedia img {
 	padding-top: 20px;
+	float: none;
+}
+
+#resumeSocial a img {
+	float:left;
+	display: block;
+	margin: auto;
 }
 
 table td {
@@ -101,10 +108,6 @@ table td {
 	clear: both;
 	padding-top: 20px;
 	text-align: left;
-}
-
-#connectSocial {
-	padding-left: 30%;
 }
 
 a button {
@@ -133,25 +136,9 @@ footer {
 	}
 }
 
-@media screen and (max-width: 760px) {
-	#connectSocial {padding: 0px;}
-	.center {text-align: left;}
-	.center img {
-		padding-left: 5px;
-		padding-right: 5px;
-	}
-	}
-
 @media screen and (max-width: 620px) {
-	#contactMe {margin-left: 0px;}
 	#message {width: 70%;}
-	.socialMedia img {display: none;}
-	.center {
-		text-align: center;
-		display: block;
-		margin: auto;
-		padding-bottom: 10px;
-	}
+	#resumeSocial img {display: none;}
 	footer {padding-top: 20px;}
 }
 
